# neutts-air

./: Dockerfile  MAKE87.yml  pyproject.toml  ref_codes.pt  reference_text.txt  requirements.txt
app/: download.py  generate_ref_codes.py  main.py
