[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
dependencies = [
    "make87[zenoh,protobuf]>=0.1.0",
    "make87_messages>=0.2.8",
    "librosa==0.11.0",
    "neucodec>=0.0.4",
    "numpy==2.2.6",
    "phonemizer==3.3.0",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "transformers==4.56.1",
    "resemble-perth==1.0.1",
    "onnxruntime==1.23.1"
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"


[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []
